2014-10-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Add API to GMainLoopSource to schedule sources after a delay in microseconds
        https://bugs.webkit.org/show_bug.cgi?id=137782

        Reviewed by Sergio Villar Senin.

        In some cases when we have a double with the time in seconds, the
        conversion to milliseconds ends up truncating the value to 0, and
        the source scheduled immediately.

        * wtf/gobject/GMainLoopSource.cpp:
        (WTF::createMicrosecondsTimeoutSource): Use a custom timeout
        source that handles the interval in microseconds instead of milliseconds.
        (WTF::GMainLoopSource::scheduleAfterDelay): Use MicrosecondsTimeoutSource.
        (WTF::GMainLoopSource::scheduleAfterDelayAndDeleteOnDestroy): Ditto.
        * wtf/gobject/GMainLoopSource.h:

2014-10-17  Dan Bernstein  <mitz@apple.com>

        Reverted incorrect build fix attempt.

        * wtf/Threading.cpp:

2014-10-17  Dan Bernstein  <mitz@apple.com>

        Tried to fix the Yosemite build.

        * wtf/Threading.cpp:

2014-10-16  Dan Bernstein  <mitz@apple.com>

        OSObjectPtr is missing leakRef()
        https://bugs.webkit.org/show_bug.cgi?id=137798

        Reviewed by Sam Weinig.

        * wtf/OSObjectPtr.h:

2014-10-14  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed gardening. Ignore Visual Studio *.sdf files.

        * WTF.vcxproj: Modified property svn:ignore.

2014-10-13  Antti Koivisto  <antti@apple.com>

        Add StringCapture helper for thread-safe lambda capture
        https://bugs.webkit.org/show_bug.cgi?id=137664

        Reviewed by Anders Carlsson.

        There is currently no clean way to capture a String in a thread-safe manner. This will now work:

        StringCapture stringCapture(string);
        auto lambdaThatRunsInAnotherThread = [stringCapture] { String string = stringCapture.string(); ... }
