@@ -1,3 +1,12 @@
+2014-10-18  Dan Bernstein  <mitz@apple.com>
+
+        WorkQueue dispatches functions but isn’t a FunctionDispatcher
+        https://bugs.webkit.org/show_bug.cgi?id=137853
+
+        Reviewed by Anders Carlsson.
+
+        * wtf/FunctionDispatcher.h: Added header guards.
+
 2014-10-17  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GLIB] Add API to GMainLoopSource to schedule sources after a delay in microseconds
